--- a/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
@@ -33,18 +33,7 @@
     <!-- LayerSlider CSS -->
     <link rel="stylesheet" href="~/vendor/layerslider/css/layerslider.css">
 
-   @* <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ForAnimalsWithLove</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/ForAnimalsWithLove.styles.css" asp-append-version="true" />
-
-    <link rel="icon" type="image/png" sizes="32x32" href="~/images/favicon.ico">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">*@
+  
 </head>
 <body>
     <header>
@@ -97,7 +86,7 @@
                         <ul class="navbar-nav ms-auto">
                             <!-- menu item -->
                             <li class="nav-item">
-                                <a class="nav-link" @*asp-controller="Home" asp-action="Index"*@>
+                                <a class="nav-link" asp-controller="Home" asp-action="About">
                                     За нас
                                 </a>
                             </li>
@@ -163,38 +152,7 @@
             <!-- /navbar -->
         </nav>
         <!-- /nav -->
-        <!--collapse -->
-        <!-- /navbar -->
-       @* <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <div class="logo btn-link">
-                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                        <img src="~/images/logo.png" alt="ForAnimalsWithLove"/>
-					</a>
-                </div>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">За нас</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Отделения</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Полезна информация</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Контакти</a>
-                        </li>
-                    </ul>
-                    <partial name="_LoginPartial" />
-                </div>
-            </div>
-        </nav>*@
+       
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -202,11 +160,46 @@
         </main>
     </div>
 
-    @*<footer class="border-top footer text-muted">
+    <!-- ==== footer ==== -->
+    <footer class="text-light">
         <div class="container">
-            &copy; ForAnimalsWithLove - 2023
+            <div class="row">
+                <div class="col-lg-6">
+                    <a class="navbar-brand" asp-controller="Home" asp-action="Index">
+                        <img src="~/images/logo.png" style="block-size: 200px" alt="ForAnimalsWithLove">
+                    </a>
+                </div>
+                <!--/ col-lg -->
+                <div class="col-lg-3">
+                    <h6><i class="fas fa-envelope margin-icon"></i>Свържи се с нас</h6>
+                    <ul class="list-unstyled">
+                        <li>0700 12 323</li>
+                        <li>office@foranimalswithlove.bg</a></li>
+                        <li>Pet Street 123 - Sofia </li>
+                    </ul>
+                    <!--/ul -->
+                </div>
+                <!--/ col-lg -->
+                <div class="col-lg-3">
+                    <h6><i class="far fa-clock margin-icon"></i>Работно време</h6>
+                    <ul class="list-unstyled">
+                        <li>Отворено: 0am - 24pm</li>
+                    </ul>
+                    <!--/ul -->
+                </div>
+                <!--/ col-lg -->
+            </div>
+
+            <!--/ row -->
         </div>
-    </footer>*@
+        <!--/ container -->
+        <!-- Go To Top Link -->
+        <div class="d-none d-md-block">
+            <a href="#top" class="back-to-top"><i class="fa fa-angle-up"></i></a>
+        </div>
+        <!--/page-scroll-->
+    </footer>
+    <!--/ footer-->
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
