change part of home view

--- a/ForAnimalsWithLove/Views/Home/Index.cshtml
+++ b/ForAnimalsWithLove/Views/Home/Index.cshtml
@@ -15,9 +15,9 @@
     <meta name="author" content="">
     <!-- page title -->
     <title>For Animals with Love</title>
-    <!--[if lt IE 9]>
+   <!--[if lt IE 9]>
     <script src="~/js/respond.js"></script>
-    <![endif]-->
+   
     <!-- Font files -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700%7CQuicksand:400,500,700&display=swap" rel="stylesheet">
     <link href="~/fonts/flaticon/flaticon.css" rel="stylesheet" type="text/css">
@@ -51,7 +51,8 @@
         <!-- Slide 1 -->
         <div class="ls-slide" data-ls="duration:4000; transition2d:7; kenburnszoom:out; kenburnsrotate:-5; kenburnsscale:1.2;">
             <!-- bg image  -->
-            <img src="~/images/animals-login.jpg" class="ls-bg" alt="animals">
+
+            <img src="~/images/belidog.jpg" class="ls-bg" alt="animals">
             <!-- text  -->
             <div class="ls-l header-wrapper" data-ls="offsetyin:150; durationin:700; delayin:200; easingin:easeOutQuint; rotatexin:20; scalexin:1.4; offsetyout:600; durationout:400; parallaxlevel:0;">
                 <div class="header-text dog-elements">
@@ -135,29 +136,34 @@
     <section id="services" class="cat-bg3">
         <div class="container">
             <div class="section-heading text-center">
-                <h2>Our Services</h2>
+                <h2>Нашите услуги</h2>
             </div>
             <!-- /Section-heading -->
             <div class="container block-padding pt-0">
                 <div class="row">
                     <div class="col-xl-6 my-auto">
-                        <h3>The best for your pet!</h3>
-                        <p>Aliquam erat volutpat In id fermentum augue, ut pellentesque leo. Maecenas at arcu risus. Donec commodo sodales ex, scelerisque laoreet nibh hendrerit id. In aliquet magna nec lobortis maximus. Etiam rhoncus leo a dolor placerat, nec elementum ipsum convall.</p>
-                        <p><strong>Etiam rhoncus leo a dolor placerat, nec elementum ipsum convall Maecenas at arcu risus scelerisque laoree.</strong></p>
+                        <h3>Най-доброто за вашия любимец!</h3>
+                        <p>Тук ще откриете най-добрата грижа за вашите малки приятели от грижа за физическото им здраве
+                            до спа процедури на световно ниво, предназначени за обичните ви! Ще се отнесем с грижа и 
+                            разбиране към всеки ваш проблем, като ще Ви съдействаме по най-добрия начин! Може да разчитате
+                            на нас!</p>
+                        <p><strong>При нас ще откриете най-доброто за вашият любимец!</strong></p>
                         <!-- ul custom-->
                         <ul class="custom ps-0">
-                            <li>Aliquam erat volut pat.</li>
-                            <li>Ibu lum orci eget, viverra elit liquam erat volut pat phas ellus ac.</li>
-                            <li>Aliquam erat volut pat phas ellu</li>
+                            <li>Медицинска и болнична грижа</li>
+                            <li>Хотелско настаняване</li>
+                            <li>Обучение</li>
+                            <li>Grooming услуги</li>
                         </ul>
                     </div>
                     <!-- /col-xl-->
                     <div class="col-xl-6">
-                        <img src="img/services2.jpg" alt="" data-aos="fade-down" data-aos-duration="1500" class="img-fluid border-irregular1 border-double">
+                        <img src="~/images/dog-grooming.jpg" alt="dog-grooming" data-aos="fade-down" data-aos-duration="1500" class="img-fluid border-irregular1 border-double">
                     </div>
                 </div>
                 <!-- /row -->
             </div>
+        
             <!-- /container -->
             <!-- services carousel -->
             <div class="bg-light-custom block-padding border-irregular1">
@@ -171,9 +177,10 @@
                             </div>
                             <!-- service content -->
                             <div class="service-content">
-                                <h6>Fun Activities</h6>
+                                <h6>Обучение</h6>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dictum malesuada.
+                                    Ние Ви предлагаме обучение на кучета от всякакъв вид породи. Нашите треньори са
+                                    професионалисти в областта и ще се погрижат за вашият любимец!
                                 </p>
                                 <a class="btn btn-primary" href="services-single.html">read more</a>
                             </div>
@@ -265,6 +272,8 @@
                         </div>
                     </div>
                     <!--col-md-12  -->
+                   
+                <!-- /carousel-item -->
                 </div>
                 <!-- /owl-services -->
             </div>
@@ -279,13 +288,12 @@
             <div class="row">
                 <div class="col-xl-8 position-relative">
                     <!-- image  -->
-                    <img src="img/blurbimg.png" class="img-fluid blurb-img" alt="">
+                    <img src="~/images/cat-comeon.jpg" style="block-size: 500px" alt="cat-comeon">
                 </div>
                 <div class="col-xl-4 my-auto" data-aos="fade-down">
-                    <h2 class="res-margin">Join our club</h2>
+                    <h2 class="res-margin">Присъедини се към нас!</h2>
                     <p class="featured-text">
-                        Maecenas at arcu risus. Donec commodo sodales ex, scelerisque laoreet nibh hendrerit id.
-                        In aliquet magna nec lobortis maximus. Etiam rhoncus leo a dolor placerat, nec elementum ipsum.
+                        Заповядай на място в клиниката ни с твоя любимец и ще се погрижим за него!
                     </p>
                     <!-- button -->
                     <a href="contact.html" class="btn btn-primary">contact us</a>
@@ -305,7 +313,7 @@
     <section id="about" class="dog-bg2">
         <div class="container">
             <div class="section-heading text-center">
-                <h2>About Us</h2>
+                <h2>Малко повече...</h2>
             </div>
             <!-- /Section-heading -->
         </div>
@@ -313,19 +321,23 @@
         <div class="container block-padding pt-0">
             <div class="row">
                 <div class="col-lg-6 my-auto">
-                    <h3>Caring for your pets</h3>
-                    <p>Aliquam erat volutpat In id fermentum augue, ut pellentesque leo. Maecenas at arcu risus. Donec commodo sodales ex, scelerisque laoreet nibh hendrerit id. In aliquet magna nec lobortis maximus. Etiam rhoncus leo a dolor placerat, nec elementum ipsum convall.</p>
-                    <p>Etiam rhoncus leo a dolor placerat, nec elementum ipsum convall Maecenas at arcu risus scelerisque laoree.</p>
+                    <h3>Предлагаме Ви всичко на едно място!</h3>
+                    <p>Заповядайте при нас за да ви помогнем с обучението на вашия любимец. 
+                        Нашите треньори са професионалисти и ще се погрижат за него с грижа и любов.
+                    </p>
+                    <p>Ако вашият любимец се нуждае от почивка, ние може да Ви помогнем. Разполагаме с два прекрасни хотела, 
+                        в който вашите домашни любимци ще се чувстват като у дома си.
+                    </p>
                     <ul class="custom ps-0">
-                        <li>Orci eget, viverra elit liquam erat volut pat phas ellus ac</li>
-                        <li>Ipuset phas ellus ac sodales Lorem ipsum dolor Phas ell</li>
-                        <li>Aliquam erat volut pat phas ellu</li>
+                        <li>Тренировка и обучение</li>
+                        <li>Отдих в планината</li>
+                        <li>Почивка в градска среда</li>
                     </ul>
                     <!-- /ul -->
                 </div>
                 <!-- image -->
                 <div class="col-lg-6">
-                    <img src="img/about2.jpg" alt="" class="img-fluid border-irregular1" data-aos="zoom-in">
+                    <img src="~/images/dog-educate.jpg" alt="dog-educate" class="img-fluid border-irregular1" data-aos="zoom-in">
                 </div>
             </div>
             <!-- /row -->
@@ -384,73 +396,7 @@
             <!-- /container -->
         </div>
         <!-- /block-padding -->
-        <div class="container bottom-block-padding">
-            <h3 class="text-center">What our clients say</h3>
-            <div class="col-md-12 mt-5">
-                <div id="owl-testimonial" class="owl-carousel owl-theme">
-                    <!-- testimonial -->
-                    <div class="testimonial">
-                        <div class="content">
-                            <p class="description">
-                                Aliquam erat volutpat In id fermentum augue, ut pellentesque leo. Maecenas at arcu risus. Donec commodo sodales ex, scelerisque laoreet nibh hendrerit id. In aliquet magna nec lobortis maximus. Etiam rhoncus leo a dolor placerat, nec elementum ipsum convall.
-                            </p>
-                        </div>
-                        <!-- /content -->
-                        <div class="testimonial-pic">
-                            <img src="img/team/team1.jpg" class="img-fluid" alt="">
-                        </div>
-                        <!-- /testimonial-pic -->
-                        <div class="testimonial-review">
-                            <h5 class="testimonial-title">Lucianna Smith</h5>
-                            <span>Teacher</span>
-                        </div>
-                        <!-- /testimonial-review -->
-                    </div>
-                    <!-- /testimonial -->
-                    <!-- testimonial -->
-                    <div class="testimonial">
-                        <div class="content">
-                            <p class="description">
-                                Aliquam erat volutpat In id fermentum augue, ut pellentesque leo. Maecenas at arcu risus. Donec commodo sodales ex, scelerisque laoreet nibh hendrerit id. In aliquet magna nec lobortis maximus. Etiam rhoncus leo a dolor placerat, nec elementum ipsum convall.
-                            </p>
-                        </div>
-                        <!-- /content -->
-                        <div class="testimonial-pic">
-                            <img src="img/team/team2.jpg" class="img-fluid" alt="">
-                        </div>
-                        <!-- /testimonial-pic -->
-                        <div class="testimonial-review">
-                            <h5 class="testimonial-title">John Sadana</h5>
-                            <span>Doctor</span>
-                        </div>
-                        <!-- /testimonial-review -->
-                    </div>
-                    <!-- /testimonial -->
-                    <!-- testimonial -->
-                    <div class="testimonial">
-                        <div class="content">
-                            <p class="description">
-                                Aliquam erat volutpat In id fermentum augue, ut pellentesque leo. Maecenas at arcu risus. Donec commodo sodales ex, scelerisque laoreet nibh hendrerit id. In aliquet magna nec lobortis maximus. Etiam rhoncus leo a dolor placerat, nec elementum ipsum convall.
-                            </p>
-                        </div>
-                        <!-- /content -->
-                        <div class="testimonial-pic">
-                            <img src="img/team/team3.jpg" class="img-fluid" alt="">
-                        </div>
-                        <!-- /testimonial-pic -->
-                        <div class="testimonial-review">
-                            <h5 class="testimonial-title">Jane Janeth</h5>
-                            <span>Librarian</span>
-                        </div>
-                        <!-- /testimonial-review -->
-                    </div>
-                    <!-- /testimonial -->
-                </div>
-                <!-- /owl-testimonial -->
-            </div>
-            <!-- /col-md-12 -->
-        </div>
-        <!-- /container -->
+       
     </section>
     <!-- / Section Ends -->
     <!-- Section: Gallery -->
@@ -473,7 +419,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="#" data-bs-toggle="tab" data-filter=".other">Other Pets</a>
             </li>
-        </ul>*@
+        </ul>
         <!-- /ul -->
         <!-- Gallery -->
         <div id="gallery-isotope" class="mt-5">
@@ -624,7 +570,7 @@
                     </div>
                 </div>
             </div>*@
-        </div>
+       @* </div>*@
         <!-- /gallery-isotope-->
     </section>
     <!-- / Section Ends -->
