--- a/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
@@ -87,6 +87,11 @@
                                     За нас
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Home" asp-action="Team">
+                                    Нашият екип
+                                </a>
+                            </li>
                             <!-- menu item -->
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" asp-controller="Home" asp-action="Privacy" id="services-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -118,16 +123,7 @@
                                     <a class="dropdown-item" href="adoption-single.html">Adoption Single Page</a>
                                 </div>
                             </li>
-                            <!-- menu item -->
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="gallery-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Gallery
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="gallery-dropdown">
-                                    <a class="dropdown-item" href="gallery.html">Gallery Style 1</a>
-                                    <a class="dropdown-item" href="gallery2.html">Gallery Style 2</a>
-                                </div>
-                            </li>
+                           
                             <!-- menu item -->
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="contact-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
