add contact page and add google maps

--- a/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
@@ -126,13 +126,9 @@
                            
                             <!-- menu item -->
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="contact-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link" id="contact-dropdown" asp-controller="Home" asp-action="Contact" aria-haspopup="true" aria-expanded="false">
                                     Контакти
                                 </a>
-                                <div class="dropdown-menu" aria-labelledby="contact-dropdown">
-                                    <a class="dropdown-item" href="contact.html">Contact Style 1</a>
-                                    <a class="dropdown-item" href="contact2.html">Contact Style 2</a>
-                                </div>
                             </li>
                         </ul>
                         <!--/ul -->
