add pages and resources

--- a/ForAnimalsWithLove/Views/Home/Index.cshtml
+++ b/ForAnimalsWithLove/Views/Home/Index.cshtml
@@ -300,7 +300,7 @@
                         Заповядай на място в клиниката ни с твоя любимец и ще се погрижим за него!
                     </p>
                     <!-- button -->
-                    <a href="contact.html" class="btn btn-primary">contact us</a>
+                    <a asp-controller="Home" asp-action="Contact" class="btn btn-primary">Контакти</a>
                 </div>
                 <!-- /col-lg -->
             </div>
