--- a/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
@@ -80,27 +80,32 @@
                         </span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarResponsive">
-                        <ul class="navbar-nav ms-auto">
+                        <ul class="navbar-nav ms-2">
                             <!-- menu item -->
                             <li class="nav-item">
                                 <a class="nav-link" asp-controller="Home" asp-action="About">
                                     За нас
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" asp-controller="Home" asp-action="Team">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle"id="services-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Нашият екип
                                 </a>
+                                <div class="dropdown-menu" aria-labelledby="services-dropdown">
+                                    <a class="dropdown-item" asp-controller="Home" asp-action="TeamVet">Ветеринари</a>
+                                    <a class="dropdown-item" asp-controller="Home" asp-action="TeamTrainer">Треньори</a>
+                                </div>
                             </li>
                             <!-- menu item -->
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" asp-controller="Home" asp-action="Privacy" id="services-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Отделения
+                                    Нашите услуги
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="services-dropdown">
-                                    <a class="dropdown-item" href="services.html">Services Style 1</a>
-                                    <a class="dropdown-item" href="services2.html">Services Style 2</a>
-                                    <a class="dropdown-item" href="services-single.html">Services Single</a>
+                                    <a class="dropdown-item" asp-controller="Home" asp-action="Halls">Отделения</a>
+                                    <a class="dropdown-item" asp-controller="Home" asp-action="Education">Обучение</a>
+                                    <a class="dropdown-item" asp-controller="Home" asp-action="Hotels">Хотелско настаняване</a>
+                                    <a class="dropdown-item" href="services-single.html">Grooming</a>
                                 </div>
                             </li>
                             <!-- menu item -->
@@ -115,25 +120,14 @@
                             </li>
                             <!-- menu item -->
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="adopt-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Полезна информация
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="adopt-dropdown">
-                                    <a class="dropdown-item" href="adoption.html">Adoption Gallery</a>
-                                    <a class="dropdown-item" href="adoption-single.html">Adoption Single Page</a>
-                                </div>
-                            </li>
-                           
-                            <!-- menu item -->
-                            <li class="nav-item dropdown">
                                 <a class="nav-link" id="contact-dropdown" asp-controller="Home" asp-action="Contact" aria-haspopup="true" aria-expanded="false">
                                     Контакти
                                 </a>
                             </li>
                         </ul>
                         <!--/ul -->
-                        <partial name="_LoginPartial" />
                     </div>
+                    <partial name="_LoginPartial" />
                     <!--collapse -->
                 </div>
                 <!-- /container -->
