add hotels and grooming pages

--- a/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
@@ -98,14 +98,14 @@
                             </li>
                             <!-- menu item -->
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" asp-controller="Home" asp-action="Privacy" id="services-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle" id="services-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Нашите услуги
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="services-dropdown">
                                     <a class="dropdown-item" asp-controller="Home" asp-action="Halls">Отделения</a>
                                     <a class="dropdown-item" asp-controller="Home" asp-action="Education">Обучение</a>
                                     <a class="dropdown-item" asp-controller="Home" asp-action="Hotels">Хотелско настаняване</a>
-                                    <a class="dropdown-item" href="services-single.html">Grooming</a>
+                                    <a class="dropdown-item" asp-controller="Home" asp-action="Grooming">Grooming</a>
                                 </div>
                             </li>
                             <!-- menu item -->
