--- a/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
@@ -109,17 +109,13 @@
                                 </div>
                             </li>
                             <!-- menu item -->
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="about-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <li class="nav-item">
+                                <a class="nav-link" id="about-dropdown" asp-controller="Home" asp-action="Aboption" aria-haspopup="true" aria-expanded="false">
                                     Осинови
                                 </a>
-                                <div class="dropdown-menu" aria-labelledby="about-dropdown">
-                                    <a class="dropdown-item" href="about.html">About Style 1</a>
-                                    <a class="dropdown-item" href="about2.html">About Style 2</a>
-                                </div>
                             </li>
                             <!-- menu item -->
-                            <li class="nav-item dropdown">
+                            <li class="nav-item">
                                 <a class="nav-link" id="contact-dropdown" asp-controller="Home" asp-action="Contact" aria-haspopup="true" aria-expanded="false">
                                     Контакти
                                 </a>
