--- a/ForAnimalsWithLove/wwwroot/css/login.css
+++ b/ForAnimalsWithLove/wwwroot/css/login.css
@@ -1,34 +1,85 @@
-﻿body {
-    background-image: url("../images/dogsayhello.jpg");
-    background-size: 2000px 1000px;  
-    background-color: bisque;
+﻿
+@import url('https://fonts.googleapis.com/css?family=Numans');
+
+html, body {
+    height: 100%;
+    font-family: 'Numans', sans-serif;
 }
 
-#account {
-   
-    height: 50px;
-    text-align: center;
-    font-size: 20px;
-    font-family: "Comic Sans MS", cursive, sans-serif;
+.container {
+    height: 100%;
+    align-content: center;
+}
+
+.card {
+    height: 420px;
+    margin-top: 100px;
+    margin-inline-end: 100px;
+    margin-bottom: auto;
+    width: 400px;
+    background-color: rgba(0,0,0,0.5) !important;
+}
+
+.social_icon span {
+    font-size: 60px;
+    margin-left: 10px;
+    color: #F9BE4F;
+}
+
+    .social_icon span:hover {
+        color: #F9575C;
+        cursor: pointer;
+    }
+
+.card-header h3 {
+    color: white;
+}
+
+.social_icon {
+    position: absolute;
+    right: 20px;
+    top: -45px;
+}
+
+.input-group-prepend span {
+    width: 50px;
+    background-color: #F9BE4F;
     color: black;
-    padding-block: 200px;
-    padding-left: 50px;
-
-
+    border: 0 !important;
 }
 
-section div {
-    padding-block: 10px;
-    padding-inline: 10px;
+input:focus {
+    outline: 0 0 0 0 !important;
+    box-shadow: 0 0 0 0 !important;
 }
 
-p {
-    font-size: 15px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.remember {
+    color: white;
 }
 
-#login-submit {
-    background-color: darksalmon;
-    border: 4px solid rgba(100, 100, 100, 1);
-    border-radius: 75px;
+    .remember input {
+        width: 20px;
+        height: 20px;
+        margin-left: 15px;
+        margin-right: 5px;
+    }
+
+.login_btn {
+    color: black;
+    background-color: #F9BE4F;
+    width: 100px;
 }
+
+    .login_btn:hover {
+        color: black;
+        background-color: #F9575C;
+    }
+
+.links {
+    color: #F9BE4F;
+}
+
+    .links a {
+        margin-left: 0px;
+        color: #F9BE4F;
+    }
