--- a/ForAnimalsWithLove/wwwroot/css/register.css
+++ b/ForAnimalsWithLove/wwwroot/css/register.css
@@ -1,25 +1,51 @@
-﻿body {
-    background-image: url("../images/catwelcome.jpg");
-    background-size: 2800px 900px;
+﻿
+@import url('https://fonts.googleapis.com/css?family=Numans');
+
+html, body {
+    height: 100%;
+    font-family: 'Numans', sans-serif;
 }
 
-#registerForm {
-    height: 60px;
-    text-align: center;
-    font-size: 20px;
-    font-family: "Comic Sans MS", cursive, sans-serif;
+.container {
+    height: 100%;
+    align-content: center;
+}
+
+.card {
+    height: 450px;
+    margin-top: 100px;
+    margin-inline-end: 100px;
+    margin-bottom: auto;
+    width: 550px;
+    background-color: rgba(0,0,0,0.5) !important;
+}
+
+
+.card-header h3 {
+    color: white;
+}
+
+
+.input-group-prepend span {
+    width: 50px;
+    background-color: #F9BE4F;
     color: black;
-    padding-top:60px;
-    float: right;
+    border: 0 !important;
 }
 
-.form-floating {
-    padding-block: 10px;
-    padding-inline: 10px;
+input:focus {
+    outline: 0 0 0 0 !important;
+    box-shadow: 0 0 0 0 !important;
 }
 
-#registerSubmit {
-    background-color: darksalmon;
-    border: 4px solid rgba(100, 100, 100, 1);
-    border-radius: 75px;
+.login_btn {
+    color: black;
+    background-color: #F9BE4F;
+    width: 200px;
 }
+
+    .login_btn:hover {
+        color: black;
+        background-color: #F9575C;
+    }
+
