--- a/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
@@ -131,7 +131,53 @@
             <!-- /navbar -->
         </nav>
         <!-- /nav -->
-       
+        @if (this.User.Identity?.IsAuthenticated ?? false)
+        {
+            <!-- NAVBAR STARTING -->
+            <!-- Use navbar class to the navbar logo
+                to the far left of the screen-->
+            <nav class=" navbar navbar-expand-lg
+        navbar-light bg-light fixed-top py-lg-0 ">
+
+                <a class="navbar-brand" href="#">
+
+                    <!-- Add logo with size of 90*80 -->
+                    <img src="https://media.geeksforgeeks.org/wp-content/cdn-uploads/20190710102234/download3.png"
+                         width="90" height="80" alt="">
+                </a>
+
+                <button class="navbar-toggler" type="button"
+                        data-toggle="collapse"
+                        data-target="#navbarResponsive"
+                        aria-controls="navbarResponsive"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation">
+
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse"
+                     id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">
+                                Home
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Courses</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        }
     </header>
     <div class="container">
         <main role="main" class="pb-3">
