add final change to home page

--- a/ForAnimalsWithLove/Views/Home/Index.cshtml
+++ b/ForAnimalsWithLove/Views/Home/Index.cshtml
@@ -55,7 +55,7 @@
   
     <div id="slider" style="width:1200px;height:800px;margin:0 auto;margin-bottom: 0px;">
         <!-- Slide 1 -->
-        <div class="ls-slide" data-ls="duration:1000; transition2d:7; kenburnszoom:out; kenburnsrotate:-5; kenburnsscale:1.2;">
+        <div class="ls-slide" data-ls="duration:1400; transition2d:7; kenburnszoom:out; kenburnsrotate:-5; kenburnsscale:1.2;">
             <!-- bg image  -->
 
             <img src="~/images/foradopt.jpg" class="ls-bg" alt="dog-adopt">
@@ -76,7 +76,7 @@
         </div>
         <!-- ls-slide -->
         <!-- Slide 2 -->
-        <div class="ls-slide" data-ls="duration:1000; transition2d:7; kenburnszoom:out; kenburnsrotate:-5; kenburnsscale:1.2;">
+        <div class="ls-slide" data-ls="duration:1400; transition2d:7; kenburnszoom:out; kenburnsrotate:-5; kenburnsscale:1.2;">
             <!-- bg image  -->
             <img src="~/images/catveterinary.jpg" class="ls-bg" alt="cat">
             <!-- text  -->
@@ -96,7 +96,7 @@
         </div>
         <!-- ls-slide -->
         <!-- Slide 3 -->
-        <div class="ls-slide" data-ls="duration:1000; transition2d:7; kenburnszoom:out; kenburnsrotate:-5; kenburnsscale:1.2;">
+        <div class="ls-slide" data-ls="duration:1400; transition2d:7; kenburnszoom:out; kenburnsrotate:-5; kenburnsscale:1.2;">
             <!-- bg image  -->
             <img src="~/images/dog-hotel.jpg" class="ls-bg" alt="hotels">
             <!-- text  -->
@@ -116,7 +116,7 @@
         </div>
         <!-- ls-slide -->
         <!-- Slide 4 -->
-        <div class="ls-slide" data-ls="duration:1000; transition2d:7; kenburnszoom:out; kenburnsrotate:-5; kenburnsscale:1.2;">
+        <div class="ls-slide" data-ls="duration:1400; transition2d:7; kenburnszoom:out; kenburnsrotate:-5; kenburnsscale:1.2;">
             <!-- bg image  -->
             <img src="~/images/trainerdog.jpg" class="ls-bg" alt="trainerdog">
             <!-- text  -->
@@ -127,6 +127,25 @@
                     <div class="d-none d-sm-block">
                         <p class="header-p">Вашият любимец е в добри ръце с нашите професионални треньори</p>
                         <a class="btn btn-primary" asp-controller="Home" asp-action="TeamTrainer">Нашият екип</a>
+                    </div>
+                    <!--/d-none  -->
+                </div>
+                <!-- header-text  -->
+            </div>
+            <!-- ls-l -->
+        </div>
+        <!-- Slide 5 -->
+        <div class="ls-slide" data-ls="duration:1400; transition2d:7; kenburnszoom:out; kenburnsrotate:-5; kenburnsscale:1.2;">
+            <!-- bg image  -->
+            <img src="~/images/petgrooming.jpg" class="ls-bg" alt="trainerdog">
+            <!-- text  -->
+            <div class="ls-l header-wrapper" data-ls="offsetyin:150; durationin:700; delayin:200; easingin:easeOutQuint; rotatexin:20; scalexin:1.4; offsetyout:600; durationout:400; parallaxlevel:0;">
+                <div class="header-text cat-elements">
+                    <h1>Grooming</h1>
+                    <!-- the div below is hidden on small screens  -->
+                    <div class="d-none d-sm-block">
+                        <p class="header-p">Вашият любимец се нуждае от глезене?</p>
+                        <a class="btn btn-primary" asp-controller="Home" asp-action="Grooming">Вижте какво предлагаме</a>
                     </div>
                     <!--/d-none  -->
                 </div>
@@ -234,7 +253,6 @@
             <!-- /row -->
         </div>
         <!-- /container -->
-        <!-- /container -->
         <div class="bg-light-custom block-padding">
             <div class="container">
                 <div id="counter" class="row">
@@ -282,16 +300,13 @@
                     </div>
                     <!-- /col-lg -->
                     <!-- Counter -->
-                    <!-- /col-lg -->
                 </div>
                 <!-- /row -->
             </div>
             <!-- /container -->
         </div>
-       
     </section>
     <!-- / Section Ends -->
-    
     <!-- Section Contact -->
     <section id="contact" class="dog-bg3">
         <!-- /container -->
