--- a/ForAnimalsWithLove/Views/Home/Grooming.cshtml
+++ b/ForAnimalsWithLove/Views/Home/Grooming.cshtml
@@ -60,7 +60,7 @@
                     </p>
                 </div>
                     
-                
+                <section>
                 <div>
                     <h5 class ="col-lg-6">Услуги, който може да намерите при нас:</h5>
                     <ul class="custom ps-0">
@@ -100,6 +100,7 @@
                     </ul>
                     <!-- /ul -->
                 </div>
+                </section>
                
             </div>
             <!-- /row -->
