spelling corection Adoption page

--- a/ForAnimalsWithLove/Views/Home/Aboption.cshtml
+++ b/ForAnimalsWithLove/Views/Home/Aboption.cshtml
@@ -55,12 +55,12 @@
                 <div class="section-heading" data-aos="zoom-in">
                 <h3>Намери твоя нов приятел</h3>
                 <p>
-                    При нас ще намериш най-добрия приятел, който търси дом. Ти може да им помогнеш и вдъхнеш радост в тези 
-                    сладури, които просто са нямали късмет, а те ще те дарят с безгранична любов.
+                    При нас ще намериш шепа любов, която търси дом. Ти може да им помогнеш и вдъхнеш радост, а тези 
+                    сладури, които просто са нямали късмет ще те дарят с безгранична любов.
                 </p>
                 <p>
-                    Освен това ще се научиш как да го гледаш и как да се грижиш за него, също ще 
-                    безплатна консултация съвети от нашите ветеринари.
+                    Освен това ще се научиш как да се грижиш за него, и също така ще получиш 
+                    безплатна консултация и съвети от нашите ветеринари.
                 </p>
             </div>
             <!-- First row: Adopt a pet -->
